improved UI of agent chat panel